--- a/MQ Download/properties/mqdownload.properties
+++ b/MQ Download/properties/mqdownload.properties
@@ -2,14 +2,15 @@
 #
 # MQ Parameters
 #
-QMANAGER=MYQM
-QNAME=MALFORMED
-QHOSTNAME=localhost
+QMANAGER=QMDEV
+QNAME=TIMPLY8300.LQ.TO.MALFORMED
+QHOSTNAME=162.70.20.28
 QCLIENTMODE=Y
-QCHANNEL=SVRCONN
-QPORT=1414
+QCHANNEL=CHANNEL1
+QPORT=11225
 
-OutputDir=C:\\TEMP\\
+OutputDir=C\:\\TEMP\\
 
 #Log Path
-LOGNAME=C:\\TEMP\\MQDownload.log
+LOGNAME=C\:\\TEMP\\MQDownload.log
+BatchOrContinuous=Batch
