Added JAVA_HOME to bat file.

--- a/MQ Download/pkg/mqdownload.properties
+++ b/MQ Download/pkg/mqdownload.properties
@@ -4,10 +4,10 @@
 #
 QMANAGER=QMDEV
 QNAME=TIMPLY8300.LQ.TO.MALFORMED
-QHOSTNAME=162.70.20.28
+QHOSTNAME=localhost
 QCLIENTMODE=Y
 QCHANNEL=CHANNEL1
-QPORT=11225
+QPORT=1414
 
 OutputDir=C\:\\TEMP\\
 
